--- a/linux/Cargo.toml
+++ b/linux/Cargo.toml
@@ -8,3 +8,5 @@ shared = { path = "../shared" }
 arboard = { version = "3", features = ["wayland-data-control"] }
 serde = { workspace = true }
 bincode = { workspace = true }
+log = { workspace = true }
+env_logger = { workspace = true }
