--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -9,6 +9,7 @@ bincode = { workspace = true }
 toml = { workspace = true }
 regex = { workspace = true }
 dirs = { workspace = true }
+log = { workspace = true }
 
 [dev-dependencies]
 tempfile = "3"
