--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,4 +15,8 @@ regex = "1.10"
 dirs = "6"
 log = "0.4"
 env_logger = "0.11"
+uuid = { version = "1.11", features = ["v4", "serde"] }
+mdns-sd = "0.12"
+tokio = { version = "1", features = ["full"] }
+clap = { version = "4", features = ["derive"] }
 
