--- a/linux/Cargo.toml
+++ b/linux/Cargo.toml
@@ -10,3 +10,5 @@ serde = { workspace = true }
 bincode = { workspace = true }
 log = { workspace = true }
 env_logger = { workspace = true }
+tokio = { workspace = true }
+uuid = { workspace = true }
