--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,22 +1,23 @@
-[workspace]
-members = ["linux", "macos", "shared"]
-resolver = "2"
-
-[workspace.package]
+[package]
+name = "cursedboard"
 version = "0.1.0"
 edition = "2021"
-authors = ["cursedboard"]
+description = "Zero-config clipboard sync across devices"
+license = "MIT"
 
-[workspace.dependencies]
-serde = { version = "1.0", features = ["derive"] }
-bincode = "1"
-toml = "0.9"
-regex = "1.10"
-dirs = "6"
-log = "0.4"
-env_logger = "0.11"
-uuid = { version = "1.11", features = ["v4", "serde"] }
-mdns-sd = "0.12"
+[dependencies]
+anyhow = "1"
+arboard = "3"
+clap = { version = "4", features = ["derive", "env"] }
+dirs = "5"
+hmac = "0.12"
+hostname = "0.4"
+mdns-sd = "0.11"
+serde = { version = "1", features = ["derive"] }
+sha2 = "0.10"
+thiserror = "2"
 tokio = { version = "1", features = ["full"] }
-clap = { version = "4", features = ["derive"] }
-
+toml = "0.8"
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+uuid = { version = "1", features = ["v4", "serde"] }
