--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ clap = { version = "4", features = ["derive", "env"] }
 dirs = "6"
 hmac = "0.12"
 hostname = "0.4"
+local-ip-address = "0.6"
 mdns-sd = "0.17"
 serde = { version = "1", features = ["derive"] }
 sha2 = "0.10"
